admin can queue emails via preference (for debugging)